[gd_scene load_steps=16 format=3 uid="uid://dkvffh53twgqk"]

[ext_resource type="PackedScene" uid="uid://bd5ud35o4lhqd" path="res://addons/xr_rig_calibrator/human_reference_rig.tscn" id="1_3wa6k"]
[ext_resource type="Script" path="res://addons/renik/renik.gd" id="2_1qwi6"]
[ext_resource type="Script" path="res://addons/xr_rig_calibrator/calibration_orchestrator.gd" id="3_00vup"]
[ext_resource type="Script" path="res://addons/xr_rig_calibrator/calibrated_tracker.gd" id="4_1yejf"]
[ext_resource type="Script" path="res://addons/xr_rig_calibrator/xr_tracking_scaler.gd" id="5_robwq"]
[ext_resource type="Script" path="res://addons/xr_rig_calibrator/rig_to_rig_calibrator.gd" id="6_oopiy"]
[ext_resource type="PackedScene" uid="uid://bp7s8m7jegpy1" path="res://addons/renik/sample_models/godette.glb" id="7_5lmam"]
[ext_resource type="Script" path="res://addons/renik/renik_placement.gd" id="8_3dnxm"]
[ext_resource type="Script" path="res://avatar_vr_demo/core/avatar_controller.gd" id="8_kcv1d"]
[ext_resource type="Script" path="res://addons/xr_rig_calibrator/copy_bones_modifier.gd" id="10_sfpus"]
[ext_resource type="Script" path="res://avatar_vr_demo/core/asset_controller.gd" id="12_bedm7"]

[sub_resource type="Resource" id="Resource_tm8l8"]
resource_name = "ForwardGait"

[sub_resource type="Resource" id="Resource_pmqig"]
resource_name = "BackwardGait"

[sub_resource type="Resource" id="Resource_32w1s"]
resource_name = "SidewaysGait"

[sub_resource type="BoxShape3D" id="BoxShape3D_itlrt"]
size = Vector3(10, 0, 10)

[node name="Node3D" type="Node3D"]

[node name="XRRig" type="Node3D" parent="."]
transform = Transform3D(0.266078, 0, 0, 0, 0.266078, 0, 0, 0, 0.266078, 0, 0, 0)

[node name="ReferenceSkeleton" parent="XRRig" instance=ExtResource("1_3wa6k")]
visible = false
bones/7/rotation = Quaternion(0.707107, 0, 0, 0.707107)
bones/8/rotation = Quaternion(0.707107, 0, 0, 0.707107)
bones/9/rotation = Quaternion(0, 0.707107, 0.707107, 0)
bones/12/rotation = Quaternion(0, -0.707107, 0, 0.707107)
bones/13/rotation = Quaternion(0, 0.707107, 0, 0.707107)
bones/14/rotation = Quaternion(-0.214187, 0.673887, 0.214187, 0.673887)
bones/14/scale = Vector3(1, 0.999392, 0.999392)
bones/31/rotation = Quaternion(0, 0.707107, 0, 0.707107)
bones/32/rotation = Quaternion(0, -0.707107, 0, 0.707107)
bones/33/rotation = Quaternion(-0.214187, -0.673887, -0.214187, 0.673887)
bones/33/scale = Vector3(1, 0.999392, 0.999392)
bones/50/rotation = Quaternion(0, 0.707107, -0.707107, 0)
bones/54/rotation = Quaternion(0, 0.707107, -0.707107, 0)

[node name="LeftHand" type="BoneAttachment3D" parent="XRRig/ReferenceSkeleton"]
transform = Transform3D(0, 1, 0, 0, 0, -1, -1, 0, 0, 0.684088, 1.39428, -0.054946)
bone_name = "LeftHand"
bone_idx = 13

[node name="Head" type="BoneAttachment3D" parent="XRRig/ReferenceSkeleton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.54646, -0.016308)
bone_name = "Head"
bone_idx = 6

[node name="Hips" type="BoneAttachment3D" parent="XRRig/ReferenceSkeleton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
bone_name = "Hips"
bone_idx = 1

[node name="IKSkeleton_bak" parent="XRRig" instance=ExtResource("1_3wa6k")]
visible = false

[node name="RenIK3D" type="Node3D" parent="XRRig/IKSkeleton_bak"]
script = ExtResource("2_1qwi6")
armature_skeleton_path = NodePath("..")
armature_head_target = NodePath("../../CalibratedRig/Head")
armature_left_hand_target = NodePath("../../CalibratedRig/LeftHand")
armature_right_hand_target = NodePath("../../CalibratedRig/RightHand")
armature_hip_target = NodePath("../../CalibratedRig/Hips")
armature_left_foot_target = NodePath("../../CalibratedRig/LeftFoot")
armature_right_foot_target = NodePath("../../CalibratedRig/RightFoot")
arm_elbow_direction_offset = 1.22173
arm_upper_arm_twisting = 0.5
arm_upper_arm_twist_offset = -0.87264
arm_forearm_twisting = 0.66666
arm_forearm_twist_offset = -0.87264
arm_twist_inflection_point = 0.349066
arm_twist_overflow = 0.785398
arm_pole_offset = Quaternion(0.113039, -0.0652631, 0.495722, 0.858616)
arm_target_position_influence = Vector3(2, -1.5, -1)
arm_target_rotation_influence = 0.33
arm_shoulder_offset = Quaternion(0, 0, 0, 1)
arm_shoulder_pole_offset = Quaternion(0, 0, 0, 1)
leg_thigh_twisting = 0.25
leg_lower_leg_twisting = 0.25
leg_lower_leg_twist_offset = 3.14159
leg_twist_overflow = 0.785398
leg_pole_offset = Quaternion(0, 0, 1, -4.37114e-08)
leg_target_rotation_influence = 0.5
torso_spine_curve = Vector3(0, 15, -15)
torso_upper_spine_stiffness = 0.5
torso_lower_spine_stiffness = 0.5
torso_spine_twist = 1.0

[node name="XROrigin3D" type="XROrigin3D" parent="XRRig"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)

[node name="HipsTracker" type="Marker3D" parent="XRRig/XROrigin3D"]
transform = Transform3D(-0.470663, 0.156994, 0.0618805, 0.117427, 0.173029, 0.454171, 0.12119, 0.442056, -0.199748, -0.0054022, 0.396683, 0.0380456)

[node name="LeftFootTracker" type="Marker3D" parent="XRRig/XROrigin3D"]
transform = Transform3D(-0.385484, 0.277979, -0.179179, -0.258848, -0.0823114, 0.429182, 0.205852, 0.417047, 0.204138, 0.333322, 0.361131, 0.15711)

[node name="RightFootTracker" type="Marker3D" parent="XRRig/XROrigin3D"]
transform = Transform3D(-0.51887, 0.173073, 0.0682185, 0.137759, 0.221623, 0.48553, 0.125022, 0.474091, -0.251874, -0.133623, 0.163981, 0.0328344)

[node name="LeftController" type="XRController3D" parent="XRRig/XROrigin3D"]
transform = Transform3D(0.499737, -0.0151144, -0.0059086, 0.0162266, 0.467989, 0.175278, 0.000231859, -0.175378, 0.468233, 0.32314, 0.740177, -0.00282609)
tracker = &"left_hand"

[node name="RightController" type="XRController3D" parent="XRRig/XROrigin3D"]
transform = Transform3D(0.539697, 0, 0, 0, 0.139568, 0.521338, 0, -0.521338, 0.139568, -0.383553, 0.745076, -0.0138934)
tracker = &"right_hand"

[node name="XRCamera3D2" type="XRCamera3D" parent="XRRig/XROrigin3D"]
transform = Transform3D(0.756795, 0, 0, 0, 0.756795, 0, 0, 0, 0.756795, 0.00318214, 0.991091, -0.016308)

[node name="CalibratedRig" type="Node3D" parent="XRRig" node_paths=PackedStringArray("skel", "raw_tracker_root", "raw_trackers")]
script = ExtResource("3_00vup")
skel = NodePath("../ReferenceSkeleton")
raw_tracker_root = NodePath("../XROrigin3D")
raw_trackers = [NodePath("../XROrigin3D/HipsTracker"), NodePath("../XROrigin3D/LeftFootTracker"), NodePath("../XROrigin3D/RightFootTracker"), NodePath("../XROrigin3D/LeftController"), NodePath("../XROrigin3D/RightController"), NodePath("../XROrigin3D/XRCamera3D2")]

[node name="Hips" type="Marker3D" parent="XRRig/CalibratedRig" node_paths=PackedStringArray("raw_tracker_node")]
transform = Transform3D(3.75829, -1.23207e-06, -4.36822e-06, 1.23206e-06, 3.75829, -6.04831e-06, 4.36823e-06, 6.04831e-06, 3.75829, 0.0338276, 1, 1.12006e-07)
script = ExtResource("4_1yejf")
raw_tracker_node = NodePath("../../XROrigin3D/HipsTracker")
position_offset = Vector3(-0.00596371, 0.00912406, 0.111808)
rotation_euler_offset = Vector3(-1.08459, 2.59625, 0.736847)

[node name="LeftFoot" type="Marker3D" parent="XRRig/CalibratedRig" node_paths=PackedStringArray("raw_tracker_node")]
transform = Transform3D(-3.35056, 1.17606e-06, -1.70249, -1.70249, -2.24012e-06, 3.35056, 1.68009e-07, 3.75829, 2.0161e-06, 0.69042, 0.552802, -0.0412093)
script = ExtResource("4_1yejf")
raw_tracker_node = NodePath("../../XROrigin3D/LeftFootTracker")
position_offset = Vector3(-0.0378676, -0.125684, -0.147216)
rotation_euler_offset = Vector3(0.403239, -0.120467, -0.467497)

[node name="RightFoot" type="Marker3D" parent="XRRig/CalibratedRig" node_paths=PackedStringArray("raw_tracker_node")]
transform = Transform3D(-3.75829, 4.752e-07, 6.336e-07, 6.336e-07, -4.48023e-07, 3.75829, 4.752e-07, 3.75829, 2.24012e-07, -0.225162, 0.238474, -0.041209)
script = ExtResource("4_1yejf")
raw_tracker_node = NodePath("../../XROrigin3D/RightFootTracker")
position_offset = Vector3(-0.0431106, -0.0573453, -0.0123894)
rotation_euler_offset = Vector3(-0.413772, 0.276463, -0.35003)

[node name="LeftHand" type="Marker3D" parent="XRRig/CalibratedRig" node_paths=PackedStringArray("raw_tracker_node")]
transform = Transform3D(1.65769e-05, 3.75829, 6.72035e-07, -3.8082e-06, 4.48023e-07, -3.75829, -3.75829, 1.68009e-05, 3.58418e-06, 0.684087, 1.39428, -0.0549461)
script = ExtResource("4_1yejf")
raw_tracker_node = NodePath("../../XROrigin3D/LeftController")
position_offset = Vector3(0.0174856, -0.0322065, -0.0383908)
rotation_euler_offset = Vector3(1.21103, -3.04928, 1.65677)

[node name="RightHand" type="Marker3D" parent="XRRig/CalibratedRig" node_paths=PackedStringArray("raw_tracker_node")]
transform = Transform3D(1.12006e-05, -3.75829, 9.18447e-06, -6.72035e-07, -9.40848e-06, -3.75829, 3.75829, 1.14246e-05, -8.96046e-07, -0.684088, 1.39428, -0.0549459)
script = ExtResource("4_1yejf")
raw_tracker_node = NodePath("../../XROrigin3D/RightController")
position_offset = Vector3(0.041509, 0.000721619, -0.0498154)
rotation_euler_offset = Vector3(0.261577, 3.14159, -1.5708)

[node name="Head" type="Marker3D" parent="XRRig/CalibratedRig" node_paths=PackedStringArray("raw_tracker_node")]
transform = Transform3D(3.75829, 0, 0, 0, 3.75829, 0, 0, 0, 3.75829, 0, 1.54646, -0.016308)
script = ExtResource("4_1yejf")
raw_tracker_node = NodePath("../../XROrigin3D/XRCamera3D2")
position_offset = Vector3(-0.00318214, -0.21786, 0.008154)

[node name="IKSkeleton" parent="XRRig" instance=ExtResource("1_3wa6k")]
bones/1/position = Vector3(0.0338275, 1, 1.12006e-07)
bones/1/rotation = Quaternion(8.04663e-07, -5.81145e-07, 1.63913e-07, 1)
bones/2/rotation = Quaternion(-0.044104, 1.25203e-07, 0.0367298, 0.998352)
bones/3/rotation = Quaternion(0.0315196, 1.24693e-07, 0.0269811, 0.999139)
bones/4/rotation = Quaternion(-0.0468763, 1.28251e-07, -0.0232868, 0.998629)
bones/5/rotation = Quaternion(0.126639, 2.00753e-07, -0.0349339, 0.991334)
bones/6/rotation = Quaternion(-0.0674464, -0.0021194, -0.00534421, 0.997707)
bones/7/rotation = Quaternion(0.707107, 0, 0, 0.707107)
bones/8/rotation = Quaternion(0.707107, 0, 0, 0.707107)
bones/9/rotation = Quaternion(0, 0.707107, 0.707107, 0)
bones/10/rotation = Quaternion(0.505497, 0.494448, 0.504995, -0.494949)
bones/11/rotation = Quaternion(0.0273512, 0.994055, 0.0401486, -0.0974426)
bones/12/rotation = Quaternion(0.126594, -0.451013, -0.0622376, 0.881299)
bones/13/rotation = Quaternion(-0.0711168, 0.416613, 0.0143968, 0.906183)
bones/14/rotation = Quaternion(-0.214187, 0.673887, 0.214187, 0.673887)
bones/14/scale = Vector3(1, 0.999392, 0.999392)
bones/29/rotation = Quaternion(0.493844, -0.506095, -0.495117, -0.504822)
bones/30/rotation = Quaternion(-0.0189301, 0.992015, 0.0461265, 0.11585)
bones/31/rotation = Quaternion(0, 0.468473, 0, 0.883478)
bones/32/rotation = Quaternion(0.00685232, -0.41803, 0.0254084, 0.908052)
bones/33/rotation = Quaternion(-0.214187, -0.673887, -0.214187, 0.673887)
bones/33/scale = Vector3(1, 0.999392, 0.999392)
bones/48/rotation = Quaternion(-0.0184417, 0.316126, 0.821022, -0.475024)
bones/49/rotation = Quaternion(-0.0593163, 0.812359, -0.578684, 0.0409701)
bones/50/rotation = Quaternion(0.344018, -0.449369, 0.824199, 0.0203554)
bones/52/rotation = Quaternion(-0.0335338, 0.267928, 0.953108, 0.136657)
bones/53/rotation = Quaternion(0.0235935, 0.844498, -0.53465, -0.0204101)
bones/54/rotation = Quaternion(-0.170875, -0.468755, 0.866597, -0.00895309)

[node name="RenIK3D" type="Node3D" parent="XRRig/IKSkeleton"]
script = ExtResource("2_1qwi6")
live_preview = true
armature_skeleton_path = NodePath("..")
armature_head_target = NodePath("../../CalibratedRig/Head")
armature_left_hand_target = NodePath("../../CalibratedRig/LeftHand")
armature_right_hand_target = NodePath("../../CalibratedRig/RightHand")
armature_hip_target = NodePath("../../CalibratedRig/Hips")
armature_left_foot_target = NodePath("../../CalibratedRig/LeftFoot")
armature_right_foot_target = NodePath("../../CalibratedRig/RightFoot")
arm_elbow_direction_offset = 1.22173
arm_upper_arm_twisting = 0.5
arm_upper_arm_twist_offset = -0.87264
arm_forearm_twisting = 0.66666
arm_forearm_twist_offset = -0.87264
arm_twist_inflection_point = 0.349066
arm_twist_overflow = 0.785398
arm_pole_offset = Quaternion(0.113039, -0.0652631, 0.495722, 0.858616)
arm_target_position_influence = Vector3(2, -1.5, -1)
arm_target_rotation_influence = 0.33
arm_shoulder_offset = Quaternion(0, 0, 0, 1)
arm_shoulder_pole_offset = Quaternion(0, 0, 0, 1)
leg_thigh_twisting = 0.25
leg_lower_leg_twisting = 0.25
leg_lower_leg_twist_offset = 3.14159
leg_twist_overflow = 0.785398
leg_pole_offset = Quaternion(0, 0, 1, -4.37114e-08)
leg_target_rotation_influence = 0.5
torso_spine_curve = Vector3(0, 15, -15)
torso_upper_spine_stiffness = 0.5
torso_lower_spine_stiffness = 0.5
torso_spine_twist = 1.0

[node name="LeftHand" type="BoneAttachment3D" parent="XRRig/IKSkeleton"]
transform = Transform3D(4.42564e-06, 1, -2.23517e-08, -9.53674e-07, 1.11759e-07, -1, -1, 4.44055e-06, 9.83477e-07, 0.684087, 1.39428, -0.0549461)
bone_name = "LeftHand"
bone_idx = 13

[node name="Head" type="BoneAttachment3D" parent="XRRig/IKSkeleton"]
transform = Transform3D(1, 3.04426e-08, -4.19095e-09, 2.47383e-08, 1, 0, -4.65661e-10, -1.49012e-08, 1, 0.000470415, 1.53661, -0.0337924)
bone_name = "Head"
bone_idx = 6

[node name="Hips" type="BoneAttachment3D" parent="XRRig/IKSkeleton"]
transform = Transform3D(1, -3.27827e-07, -1.16229e-06, 3.27825e-07, 1, -1.60933e-06, 1.16229e-06, 1.60933e-06, 1, 0.0338275, 1, 1.12006e-07)
bone_name = "Hips"
bone_idx = 1

[node name="test_rig" type="Node3D" parent="."]
transform = Transform3D(0.979533, 0, 0, 0, 0.979533, 0, 0, 0, 0.979533, 0, 0, 0)

[node name="XRTrackingScaler" type="Node3D" parent="test_rig" node_paths=PackedStringArray("reference_skel", "target_skel", "xr_rig_root")]
script = ExtResource("5_robwq")
reference_skel = NodePath("../../XRRig/ReferenceSkeleton")
target_skel = NodePath("../Godette_vrm_v4/GeneralSkeleton")
xr_rig_root = NodePath("../../XRRig")
scale_mult = 1.01

[node name="IKTargets" type="Node3D" parent="test_rig" node_paths=PackedStringArray("source_skel", "target_skel", "src_tracker_root", "src_trackers")]
script = ExtResource("6_oopiy")
source_skel = NodePath("../../XRRig/ReferenceSkeleton")
target_skel = NodePath("../Godette_vrm_v4/GeneralSkeleton")
src_tracker_root = NodePath("../../XRRig/CalibratedRig")
src_trackers = [NodePath("../../XRRig/CalibratedRig/Hips"), NodePath("../../XRRig/CalibratedRig/LeftFoot"), NodePath("../../XRRig/CalibratedRig/RightFoot"), NodePath("../../XRRig/CalibratedRig/LeftHand"), NodePath("../../XRRig/CalibratedRig/RightHand"), NodePath("../../XRRig/CalibratedRig/Head")]

[node name="Hips" type="Marker3D" parent="test_rig/IKTargets" node_paths=PackedStringArray("raw_tracker_node")]
transform = Transform3D(1.02089, -3.34676e-07, -1.18658e-06, 3.34674e-07, 1.02089, -1.64295e-06, 1.18658e-06, 1.64295e-06, 1.02089, 0.00918885, 0.271638, 3.1437e-08)
gizmo_extents = 0.78
script = ExtResource("4_1yejf")
raw_tracker_node = NodePath("../../../XRRig/CalibratedRig/Hips")
position_offset = Vector3(-5.06539e-16, 5.96046e-08, 3.72529e-09)

[node name="LeftFoot" type="Marker3D" parent="test_rig/IKTargets" node_paths=PackedStringArray("raw_tracker_node")]
transform = Transform3D(-0.91014, 2.89038e-07, -0.462462, -0.462462, -4.86801e-07, 0.91014, 4.56375e-08, 1.02089, 5.47651e-07, 0.173734, 0.141925, -0.00829073)
gizmo_extents = 0.78
script = ExtResource("4_1yejf")
raw_tracker_node = NodePath("../../../XRRig/CalibratedRig/LeftFoot")
position_offset = Vector3(0.0590626, 0.0106881, -0.00400375)

[node name="RightFoot" type="Marker3D" parent="test_rig/IKTargets" node_paths=PackedStringArray("raw_tracker_node")]
transform = Transform3D(-1.02089, 1.29082e-07, 1.7211e-07, 1.7211e-07, -1.217e-07, 1.02089, 1.29083e-07, 1.02089, 1.8255e-07, -0.0451188, 0.0636911, -0.00829064)
gizmo_extents = 0.78
script = ExtResource("4_1yejf")
raw_tracker_node = NodePath("../../../XRRig/CalibratedRig/RightFoot")
position_offset = Vector3(-0.0590626, 0.0106881, -0.00400372)

[node name="LeftHand" type="Marker3D" parent="test_rig/IKTargets" node_paths=PackedStringArray("raw_tracker_node")]
transform = Transform3D(4.3812e-06, 1.02089, 6.08501e-08, -1.03445e-06, 0, -1.02089, -1.02089, 4.44205e-06, 9.73601e-07, 0.181971, 0.381658, -0.0180347)
gizmo_extents = 0.78
script = ExtResource("4_1yejf")
raw_tracker_node = NodePath("../../../XRRig/CalibratedRig/LeftHand")
position_offset = Vector3(0.0114462, -0.0141846, -0.0107415)

[node name="RightHand" type="Marker3D" parent="test_rig/IKTargets" node_paths=PackedStringArray("raw_tracker_node")]
transform = Transform3D(2.98165e-06, -1.02089, 2.5557e-06, -2.12975e-07, -2.6774e-06, -1.02089, 1.02089, 3.01208e-06, -2.434e-07, -0.181971, 0.381658, -0.0180346)
gizmo_extents = 0.78
script = ExtResource("4_1yejf")
raw_tracker_node = NodePath("../../../XRRig/CalibratedRig/RightHand")
position_offset = Vector3(-0.0114462, -0.0141847, -0.0107415)

[node name="Head" type="Marker3D" parent="test_rig/IKTargets" node_paths=PackedStringArray("raw_tracker_node")]
transform = Transform3D(1.02089, 0, 0, 0, 1.02089, 0, 0, 0, 1.02089, 8.8063e-10, 0.423522, -0.00116434)
gizmo_extents = 0.78
script = ExtResource("4_1yejf")
raw_tracker_node = NodePath("../../../XRRig/CalibratedRig/Head")
position_offset = Vector3(3.24192e-09, 0.0126789, 0.0120216)

[node name="Godette_vrm_v4" parent="test_rig" instance=ExtResource("7_5lmam")]
transform = Transform3D(0.411149, 0, 0, 0, 0.411149, 0, 0, 0, 0.411149, 0, 0, 0)

[node name="GeneralSkeleton" parent="test_rig/Godette_vrm_v4" index="0"]
bones/1/position = Vector3(0.0206812, 0.688252, -0.000211291)
bones/1/rotation = Quaternion(8.04663e-07, -5.81145e-07, 1.63913e-07, 1)
bones/2/rotation = Quaternion(0.0173084, 4.27409e-16, 0.0214734, 0.99962)
bones/3/rotation = Quaternion(-0.0402093, 1.95067e-07, 0.0210416, 0.99897)
bones/4/rotation = Quaternion(0.0303172, 2.78855e-07, -0.0283667, 0.999138)
bones/5/rotation = Quaternion(-0.00743371, 0.00058836, -0.014152, 0.999872)
bones/25/rotation = Quaternion(0.508808, 0.491105, 0.502857, -0.497056)
bones/26/rotation = Quaternion(-0.0173061, 0.992002, 0.0995683, -0.075622)
bones/27/rotation = Quaternion(0.299173, -0.436752, -0.135084, 0.837554)
bones/28/rotation = Quaternion(-0.16941, 0.41366, 0.115088, 0.887097)
bones/41/rotation = Quaternion(0.496928, -0.503003, -0.492269, -0.507663)
bones/42/rotation = Quaternion(0.0223213, 0.985469, 0.141043, 0.091981)
bones/43/rotation = Quaternion(0.208948, 0.464913, 0.0888396, 0.855748)
bones/44/rotation = Quaternion(-0.0946613, -0.415544, -0.0769753, 0.901353)
bones/61/rotation = Quaternion(-0.0212598, 0.346026, 0.804952, -0.481525)
bones/62/rotation = Quaternion(-0.0302326, 0.798165, -0.600542, 0.0369846)
bones/63/rotation = Quaternion(0.327007, -0.461274, 0.823803, 0.0405199)
bones/65/rotation = Quaternion(-0.00814903, 0.255978, 0.966224, 0.0286265)
bones/66/rotation = Quaternion(0.00349933, 0.874205, -0.485525, -0.00430123)
bones/67/rotation = Quaternion(-0.0349478, -0.511642, 0.858485, -0.00192788)

[node name="LogicContainer" type="Node3D" parent="test_rig/Godette_vrm_v4"]
transform = Transform3D(0.898533, 0.432097, -0.077013, -0.433652, 0.84693, -0.307663, -0.067716, 0.309842, 0.948374, 0, 0, 0)
script = ExtResource("8_kcv1d")

[node name="RenIK" type="Node3D" parent="test_rig/Godette_vrm_v4/LogicContainer"]
transform = Transform3D(1, 9.31323e-09, 0, -6.89179e-08, 1, 2.98023e-08, -7.45058e-09, -2.98023e-08, 1, 0, 0, 0)
script = ExtResource("2_1qwi6")
live_preview = true
armature_skeleton_path = NodePath("../../GeneralSkeleton")
armature_head_target = NodePath("../../../IKTargets/Head")
armature_left_hand_target = NodePath("../../../IKTargets/LeftHand")
armature_right_hand_target = NodePath("../../../IKTargets/RightHand")
armature_hip_target = NodePath("../../../IKTargets/Hips")
armature_left_foot_target = NodePath("../../../IKTargets/LeftFoot")
armature_right_foot_target = NodePath("../../../IKTargets/RightFoot")
arm_elbow_direction_offset = 1.22173
arm_upper_arm_twisting = 0.5
arm_upper_arm_twist_offset = -0.872665
arm_forearm_twisting = 0.66666
arm_forearm_twist_offset = -0.872665
arm_twist_inflection_point = 0.349066
arm_twist_overflow = 0.785398
arm_pole_offset = Quaternion(0.113039, -0.0652631, 0.495722, 0.858616)
arm_target_position_influence = Vector3(2, -1.5, -1)
arm_target_rotation_influence = 0.33
arm_shoulder_offset = Quaternion(0, 0, 0, 1)
arm_shoulder_pole_offset = Quaternion(0, 0, 0, 1)
leg_thigh_twisting = 0.25
leg_lower_leg_twisting = 0.25
leg_lower_leg_twist_offset = 3.14159
leg_twist_overflow = 0.785398
leg_pole_offset = Quaternion(0, 0, 1, -4.37114e-08)
leg_target_rotation_influence = 0.5
torso_spine_curve = Vector3(0, 15, -15)
torso_upper_spine_stiffness = 0.5
torso_lower_spine_stiffness = 0.5
torso_spine_twist = 1.0

[node name="RenIKFootPlacement" type="Node3D" parent="test_rig/Godette_vrm_v4/LogicContainer"]
transform = Transform3D(1, 1.11759e-08, 0, -6.70552e-08, 1, 0, -7.45058e-09, 0, 1, 0, 0, 0)
script = ExtResource("8_3dnxm")
live_preview = true
forward_gait = SubResource("Resource_tm8l8")
backward_gait = SubResource("Resource_pmqig")
sideways_gait = SubResource("Resource_32w1s")
spine_length = 0.279549
left_leg_length = 0.436078
right_leg_length = 0.436078
hip_offset = Vector3(3.24193e-09, -0.340921, 0.0225741)
left_hip_offset = Vector3(0.109996, -0.15282, -0.0373533)
right_hip_offset = Vector3(-0.109996, -0.15282, -0.0373532)
armature_skeleton_path = NodePath("../../GeneralSkeleton")
enable_left_foot_placement = false
enable_right_foot_placement = false
armature_head_target = NodePath("../../../IKTargets/Head")

[node name="StaticBody3D" type="StaticBody3D" parent="test_rig"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="test_rig/StaticBody3D"]
shape = SubResource("BoxShape3D_itlrt")

[node name="godette" parent="test_rig" instance=ExtResource("7_5lmam")]
transform = Transform3D(1.00546, 0, 0, 0, 1.00546, 0, 0, 0, 1.00546, 0.996115, 0, 0)
visible = false

[node name="GeneralSkeleton" parent="test_rig/godette" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0035758, 0.00386733, 0.00171602)
bones/1/position = Vector3(0.0218889, 0.647072, 7.24758e-08)
bones/1/rotation = Quaternion(8.04663e-07, -5.81145e-07, 1.63913e-07, 1)
bones/2/rotation = Quaternion(-0.044104, 1.25121e-07, 0.0367298, 0.998352)
bones/3/rotation = Quaternion(-0.0153595, -0.000530533, 0.00367744, 0.999875)
bones/4/rotation = Quaternion(0.126639, 2.00875e-07, -0.0349339, 0.991334)
bones/5/rotation = Quaternion(-0.0674464, -0.0021194, -0.00534421, 0.997706)
bones/25/rotation = Quaternion(0.505497, 0.494448, 0.504995, -0.494949)
bones/26/rotation = Quaternion(-0.0273512, -0.994055, -0.0401486, 0.0974426)
bones/27/rotation = Quaternion(0.126594, -0.451013, -0.0622376, 0.881299)
bones/28/rotation = Quaternion(-0.0711168, 0.416614, 0.0143968, 0.906183)
bones/38/rotation = Quaternion(-0.214187, 0.673887, 0.214187, 0.673887)
bones/39/rotation = Quaternion(0, 0, 0, 1)
bones/41/rotation = Quaternion(0.493844, -0.506095, -0.495117, -0.504822)
bones/42/rotation = Quaternion(-0.0189301, 0.992015, 0.0461265, 0.11585)
bones/43/rotation = Quaternion(-5.21541e-08, 0.468473, -1.49012e-08, 0.883478)
bones/44/rotation = Quaternion(0.00685242, -0.41803, 0.0254085, 0.908052)
bones/54/rotation = Quaternion(-0.214187, -0.673887, -0.214187, 0.673887)
bones/55/rotation = Quaternion(0, 0, 0, 1)
bones/56/rotation = Quaternion(0, 0, 0, 1)
bones/61/rotation = Quaternion(-0.0184417, 0.316126, 0.821022, -0.475024)
bones/62/rotation = Quaternion(0.0593164, -0.812359, 0.578684, -0.04097)
bones/63/rotation = Quaternion(-0.344018, 0.449369, -0.824199, -0.0203554)
bones/64/rotation = Quaternion(7.45058e-09, -1, -5.96046e-08, 7.45058e-09)
bones/65/rotation = Quaternion(-0.0335338, 0.267928, 0.953108, 0.136657)
bones/66/rotation = Quaternion(-0.0235936, -0.844498, 0.53465, 0.0204101)
bones/67/rotation = Quaternion(0.170875, 0.468755, -0.866597, 0.00895308)
bones/68/rotation = Quaternion(-5.32907e-15, -1, -5.96046e-08, -7.10543e-15)

[node name="CopyBonesModifier3D" type="SkeletonModifier3D" parent="test_rig/godette/GeneralSkeleton" index="2" node_paths=PackedStringArray("source_skeleton")]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
active = true
influence = 1.0
script = ExtResource("10_sfpus")
source_skeleton = NodePath("../../../../XRRig/IKSkeleton")

[node name="AssetController" type="Node" parent="test_rig"]
script = ExtResource("12_bedm7")

[editable path="XRRig/ReferenceSkeleton"]
[editable path="XRRig/IKSkeleton_bak"]
[editable path="XRRig/IKSkeleton"]
[editable path="test_rig/Godette_vrm_v4"]
[editable path="test_rig/godette"]
